<resources>
    <string name="app_name">holaa</string>
    <string name="correo">Correo</string>
    <string name="pass">Password</string>
    <string name="entrar">Conectar</string>
    <string name="Ccuenta">Crear Cuenta</string>
    <string name="OlvideClave">Olvide La CLave</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Analisis">Analisis de Riesgo</string>
    <string name="checklistH">Checklist de Herramienta</string>
    <string name="asistenciaS">Asistencia Semanal</string>
    <string name="asistenciaD">Asistencia Diaria</string>
    <string name="ChecklistA">Checklist de Arnes</string>



    <string name="title_activity_toolbar">toolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="menuOp1">Registro</string>
    <string name="menuOp2">Alumnos</string>
    <string name="menuOp3">Configuraciones</string>
    <string name="textoF1">Hola registro</string>
    <string name="textoF2">Hola configuracion</string>
    <string name="textoF3">Hola Alumnos</string>
    <string name="textotF1">tab1</string>
    <string name="textotF2">tab 2</string>
    <string name="textotF3">tab3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- tab2 registro del trabajador-->
    <string name="textoNmbreTrabajador">Nombre</string>
    <string name="textoApellidoTrabajador">Apellido</string>
    <string name="textoEdadTrabajador">Edad</string>
    <!--  registro del trabajador-->
    <string name="regNombre">Nombre</string>
    <string name="regApellido">Apellido</string>
    <string name="regCorreo">Correo</string>
    <string name="regClave">Clave</string>



</resources>